# Find

./: README.md  pyproject.toml  setup.py
src/Find.egg-info/: PKG-INFO  SOURCES.txt
src/ReadDocx.egg-info/: PKG-INFO  SOURCES.txt
src/find/: __init__.py
src/finds/: __init__.py
